--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -25,7 +25,7 @@
     <!-- De Cards met onze categorieen -->
     <main class="cards-container">
         <div class="grid">
-            <a href="/Groep Ace Quiz Project/HTML/zoology.html" class="card">
+            <div class="card" onclick="startQuiz('zoology')">
                 <div class="card-titel">
                     <h1>Zoology</h1>
                 </div>
@@ -34,8 +34,8 @@
                 <div class="author">
                     <b>Idee door:</b> <em>Will-Clair Finisie</em>
                 </div>
-            </a>
-            <a href="/Groep Ace Quiz Project/HTML/auto's.html" class="card">
+            </div>
+            <div class="card" onclick="startQuiz('autoKennis')">
                 <div class="card-titel">
                     <h1>Auto Kennis</h1>
                 </div>
@@ -44,8 +44,8 @@
                 <div class="author">
                     <b>Idee door:</b> <em>Suriyo Verweij</em>
                 </div>
-            </a>
-            <a href="/Groep Ace Quiz Project/HTML/geschiedenis.html" class="card">
+            </div>
+            <div class="card" onclick="startQuiz('geschiedenis')">
                 <div class="card-titel">
                     <h1>Geschiedenis</h1>
                 </div>
@@ -55,8 +55,8 @@
                 <div class="author">
                     <b>Idee door:</b> <em>Luka Jalžabetić</em>
                 </div>
-            </a>
-            <a href="/Groep Ace Quiz Project/HTML/topografie.html" class="card">
+            </div>
+            <div class="card" onclick="startQuiz('topografie')">
                 <div class="card-titel">
                     <h1>Topografie</h1>
                 </div>
@@ -65,9 +65,20 @@
                 <div class="author">
                     <b>Idee door:</b> <em>Wendell Long</em>
                 </div>
-            </a>
+            </div>
         </div>
     </main>
+    <!-- Hier is de sectie dat de vragen doet van onze Quiz-->
+    <div id="quiz" style="display: none;"> <!--Dit zorgt ervoor dat we het niet zien totdat we de button klikt!-->
+        <h2 id="vraag"></h2>
+        <div id="opties"></div>
+        <button id="volgende" onclick="volgendeVraag()">Volgende</button> <!--Dit is de button!-->
+    </div>
+
+    <div id="resultaat" style="display:none;">
+        <h2>Je score: <span id="score"></span></h2>
+        <button id="resultaat-button" onclick="location.reload()">Probeer het opniew of probeer een andere categorie!</button>
+    </div>
     <br>
     <br>
     <!-- Achtergrond Muziek -->
