Luka: Speler Naam Knop Werkt

--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -25,6 +25,10 @@
           <a class="button-home" href="/Groep Ace Quiz Project/index.html"
             >Terug naar start           </a>
         </button>
+        <!-- Speler Naam Knop -->
+         <button id="playerNameButton">
+          Verander hier je naam!
+         </button>
     </aside>
     <!-- De Cards met onze categorieen -->
     <main class="cards-container">
@@ -115,7 +119,7 @@
     </audio>
     <!-- Footer -->
     <footer>
-      <h1>Naam van speler:</h1>
+      <h1 id="playerName">Naam van speler:</h1>
     </footer>
     <script src="javascript/script.js"></script>
   </body>
