--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -29,6 +29,18 @@
          <button id="playerNameButton">
           Verander hier je naam!
          </button>
+<br>
+      <!--50/50 button-->
+<div class="power-up-button">
+    <button id="power-up">
+        50/50 PowerUp
+    </button>
+    <p id="power-up-regel">
+        <strong>Verwijderd 2 onjuist antwoorden! <br>
+        Je mag dit 1 keer gebruiken</strong>
+    </p>
+</div>
+
     </aside>
     <!-- De Cards met onze categorieen -->
     <main class="cards-container">
