--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -29,6 +29,7 @@
     <button id="playerNameButton">
       Verander hier je naam!
     </button>
+    <button id="power-up"></button>
   </aside>
   <!-- De Cards met onze categorieen -->
   <main class="cards-container">
