--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -29,7 +29,17 @@
     <button id="playerNameButton">
       Verander hier je naam!
     </button>
-    <button id="power-up"></button>
+
+
+    <button id="power-up">
+      50/50 Power Up
+    </button>
+
+
+
+
+
+
   </aside>
   <!-- De Cards met onze categorieen -->
   <main class="cards-container">
