--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -34,8 +34,8 @@
     <button id="power-up">
       50/50 Power Up
     </button>
-
-
+<p id="power-up-regel">2 foute antwoorden worden tonen <br> Je mag dit 1 keer gebruiken</p>
+    
 
 
 
