Autokennis html, css en java toegevoegd.

--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -35,10 +35,6 @@
       50/50 Power Up
     </button>
 <p id="power-up-regel">2 foute antwoorden worden tonen <br> Je mag dit 1 keer gebruiken</p>
-    
-
-
-
 
   </aside>
   <!-- De Cards met onze categorieen -->
@@ -54,13 +50,15 @@
           <b>Idee door:</b> <em>Will-Clair Finisie</em>
         </div>
       </div>
-      <div class="card" onclick="startQuiz('autoKennis')">
+      <div class="card">
+        <a href="/Groep Ace Quiz Project/HTML/autokennis.html">
         <div class="card-titel">
           <h1>Auto Kennis</h1>
         </div>
         <img class="image-quiz" src="img/auto's-image.jpg" width="475" height="500" alt="auto-image" />
         <div class="image-text">Hoeveel weet jij van auto's?</div>
         <div class="author"><b>Idee door:</b> <em>Suriyo Verweij</em></div>
+        </a>
       </div>
       <div class="card" onclick="startQuiz('geschiedenis')">
         <div class="card-titel">
