--- a/Groep Ace Quiz Project/HTML/geschiedenis.html
+++ b/Groep Ace Quiz Project/HTML/geschiedenis.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ace Quiz: Autokennis</title>
-    <link rel="stylesheet" href="/Groep Ace Quiz Project/css/autokennis.css">
+    <title>Ace Quiz: Geschiedenis</title>
+    <link rel="stylesheet" href="/Groep Ace Quiz Project/css/geschiedenis.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     </aside>
     <div class="startCard">
         <main class="cards-container">
-            <div class="card" onclick="startQuiz ('autoKennis')">
+            <div class="card" onclick="startQuiz ('geschiedenis')">
                 <div class="card-titel">
                     <h1>Klik op mij om te beginnen!</h1>
                 </div>
@@ -54,7 +54,7 @@
 
 
 
-    <script src="/Groep Ace Quiz Project/javascript/autokennis.js"></script>
+    <script src="/Groep Ace Quiz Project/javascript/geschiedenis.js"></script>
 </body>
 
 </html>
