--- a/Groep Ace Quiz Project/index.html
+++ b/Groep Ace Quiz Project/index.html
@@ -34,48 +34,53 @@
     <button id="power-up">
       50/50 Power Up
     </button>
-<p id="power-up-regel">2 foute antwoorden worden tonen <br> Je mag dit 1 keer gebruiken</p>
+    <p id="power-up-regel">2 foute antwoorden worden tonen <br> Je mag dit 1 keer gebruiken</p>
 
   </aside>
   <!-- De Cards met onze categorieen -->
   <main class="cards-container">
     <div class="grid">
-      <div class="card" onclick="startQuiz('zoology')">
+      <div class="card">
+      <a href="/Groep Ace Quiz Project/HTML/zoology.html">
         <div class="card-titel">
           <h1>Zoology</h1>
         </div>
         <img class="image-quiz" src="img/zoology-image.png" width="475" height="500" alt="zoology-image" />
         <div class="image-text">Hoeveel weet jij van dieren?</div>
-        <div class="author">
-          <b>Idee door:</b> <em>Will-Clair Finisie</em>
-        </div>
-      </div>
-      <div class="card">
-        <a href="/Groep Ace Quiz Project/HTML/autokennis.html">
+        <div class="author"><b>Idee door:</b> <em>Will-Clair Finisie</em></div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="/Groep Ace Quiz Project/HTML/autokennis.html">
         <div class="card-titel">
           <h1>Auto Kennis</h1>
         </div>
         <img class="image-quiz" src="img/auto's-image.jpg" width="475" height="500" alt="auto-image" />
         <div class="image-text">Hoeveel weet jij van auto's?</div>
         <div class="author"><b>Idee door:</b> <em>Suriyo Verweij</em></div>
-        </a>
+      </a>
+    </div>
+    <div class="card">
+    <a href="/Groep Ace Quiz Project/HTML/geschiedenis.html">
+      <div class="card-titel">
+        <h1>Geschiedenis</h1>
       </div>
-      <div class="card" onclick="startQuiz('geschiedenis')">
-        <div class="card-titel">
-          <h1>Geschiedenis</h1>
-        </div>
-        <img class="image-quiz" src="img/geschiedenis-image.jpg" width="475" height="500" alt="geschiedenis-image" />
-        <div class="image-text">Hoeveel weet jij van onze geschiedenis?</div>
-        <div class="author"><b>Idee door:</b> <em>Luka Jalžabetić</em></div>
-      </div>
-      <div class="card" onclick="startQuiz('topografie')">
+      <img class="image-quiz" src="img/geschiedenis-image.jpg" width="475" height="500" alt="geschiedenis-image" />
+      <div class="image-text">Hoeveel weet jij van onze geschiedenis?</div>
+      <div class="author"><b>Idee door:</b> <em>Luka Jalžabetić</em></div>
+    </a>
+    </div>
+    
+    <div class="card">
+      <a href="/Groep Ace Quiz Project/HTML/topografie.html">
         <div class="card-titel">
           <h1>Topografie</h1>
         </div>
         <img class="image-quiz" src="img/topografie-image.jpg" width="475" height="500" alt="topografie-image" />
         <div class="image-text">Hoeveel weet jij van onze topografie?</div>
         <div class="author"><b>Idee door:</b> <em>Wendell Long</em></div>
-      </div>
+      </a>
+    </div>
     </div>
   </main>
   <!-- Hier is de sectie dat de vragen doet van onze Quiz-->
@@ -99,10 +104,6 @@
   <audio id="bg-music" loop autoplay>
     <source src="/Groep Ace Quiz Project/audio/Kahoot Lobby Music.mp3" type="audio/mpeg" />
   </audio>
-  <!-- Footer -->
-  <footer>
-    <h1 id="playerName">Naam van speler:</h1>
-  </footer>
   <script src="javascript/script.js"></script>
 </body>
 
