--- a/Groep Ace Quiz Project/HTML/geschiedenis.html
+++ b/Groep Ace Quiz Project/HTML/geschiedenis.html
@@ -31,7 +31,7 @@
                 <div class="card-titel">
                     <h1>Klik op mij om te beginnen!</h1>
                 </div>
-                <img class="image-quiz" src="/Groep Ace Quiz Project/img/auto's-image.jpg" width="400" height="300"
+                <img class="image-quiz" src="/Groep Ace Quiz Project/img/Goated-image.jpg" width="400" height="300"
                     alt="auto-image" />
             </div>
         </main>
