--- a/Groep Ace Quiz Project/HTML/topografie.html
+++ b/Groep Ace Quiz Project/HTML/topografie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ace Quiz: Topografie</title>
+    <title>Ace Quiz: Geschiedenis</title>
     <link rel="stylesheet" href="/Groep Ace Quiz Project/css/topografie.css">
 </head>
 
@@ -18,6 +18,9 @@
         <button id="playerNameButton">
             Verander hier je naam!
         </button>
+        <button id="reset-button">
+                <a class="button-home" href="/Groep Ace Quiz Project/index.html">Terug naar start</a>
+            </button>
         <button id="power-up">
             50/50 Power Up
         </button>
@@ -28,13 +31,13 @@
                 <div class="card-titel">
                     <h1>Klik op mij om te beginnen!</h1>
                 </div>
-                <img class="image-quiz" src="/Groep Ace Quiz Project/img/auto's-image.jpg" width="475" height="500"
+                <img class="image-quiz" src="/Groep Ace Quiz Project/img/background.jpg" width="400" height="300"
                     alt="auto-image" />
             </div>
         </main>
     </div>
     <div class="wrapperGame">
-        <div id="resultaat" style="display: block">
+        <div id="resultaat" style="display: none">
             <h2>Vraag: <span id="score"></span></h2>
             <button id="resultaat-button" onclick="location.reload()">
                 Probeer Opnieuw
