--- a/Groep Ace Quiz Project/HTML/geschiedenis.html
+++ b/Groep Ace Quiz Project/HTML/geschiedenis.html
@@ -38,7 +38,7 @@
     </div>
     <div class="wrapperGame">
         <div id="resultaat" style="display: none">
-            <h2>Vraag: <span id="score"></span></h2>
+            <h2>Vragen Goed: <span id="score"></span></h2>
             <button id="resultaat-button" onclick="location.reload()">
                 Probeer Opnieuw
             </button>
