Eind Resultaat: The Sequel

--- a/Groep Ace Quiz Project/HTML/topografie.html
+++ b/Groep Ace Quiz Project/HTML/topografie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ace Quiz: Geschiedenis</title>
+    <title>Ace Quiz: Topografie</title>
     <link rel="stylesheet" href="/Groep Ace Quiz Project/css/topografie.css">
 </head>
 
@@ -38,7 +38,7 @@
     </div>
     <div class="wrapperGame">
         <div id="resultaat" style="display: none">
-            <h2>Vraag: <span id="score"></span></h2>
+            <h2>Score: <span id="score"></span></h2>
             <button id="resultaat-button" onclick="location.reload()">
                 Probeer Opnieuw
             </button>
